8154161: Webkit: Conversion from string literal loses const qualifier

Reviewed-by: kcr