modules/web/src/main/native/Source/WebCore/platform/java/api/BackForwardListJava.cpp
@@ -34,7 +34,7 @@ static HistoryItem* getItem(jlong jitem)
     return static_cast<HistoryItem*>(jlong_to_ptr(jitem));
 }
 
-static jmethodID initMethod(JNIEnv* env, jclass cls, char* name, const char* signature)
+static jmethodID initMethod(JNIEnv* env, jclass cls, const char* name, const char* signature)
 {
     jmethodID mid = env->GetMethodID(cls, name, signature);
     ASSERT(mid);
